# benchmark

./: .gitmodules  Readme.md
circom/: .gitignore  README.md  package.json  requirements.txt  test_fibonacci.py  test_merkle.py  test_poseidon.py  test_sha256.py
circom/circuits/base/: fibonacci.circom  merkle.circom  sha256_bytes.circom
circom/scripts/: compile_circuit.sh  util.py
jolt/: Makefile  Readme.md
jolt/algos/addition/: Cargo.toml
jolt/algos/addition/guest/: Cargo.toml
jolt/algos/addition/src/: main.rs
jolt/algos/division/src/: main.rs
jolt/algos/fib/: Cargo.toml  cycles.txt  trace.txt
jolt/algos/fib/src/: main.rs
jolt/algos/for-loop/: outpur.txt
jolt/algos/multiplication/: Cargo.toml
jolt/algos/poseidon/: cycles.txt
jolt/algos/poseidon/guest/: Cargo.toml
jolt/algos/poseidon/guest/src/: lib.rs
jolt/algos/sha256/: Cargo.toml  rust-toolchain.toml
jolt/algos/subtraction/: Cargo.toml
jolt/inputs/: data.json
nexus/: Cargo.toml  Readme.md
nexus-zk-bench/src/: main.rs
nexus/src/: main.rs
powdr/: Makefile  Readme.md
powdr/fib/: Cargo.toml
powdr/fib/guest/: Cargo.toml
powdr/fib/src/: main.rs
powdr/merkle-leaf-proof/: Cargo.toml
powdr/merkle-leaf-proof/guest/: Cargo.toml
powdr/poseidon/: Cargo.toml
powdr/poseidon/guest/: Cargo.toml
powdr/poseidon/guest/src/: main.rs
powdr/sha/: Cargo.toml
powdr/sha/src/: main.rs
reports/: Readme.md
reports/circom/: Results_circom.txt
reports/halo2/: README.md  Readme.md  fibonacci.json  merkle_merge.json  poseidon.json  sha256.json
reports/halo2/merkle_merge-verifier/: index.html
reports/halo2/poseidon/: index.html
reports/jolt/: Readme.md
reports/nexus/: Readme.md
reports/powdr/: Readme.md
reports/sp1/: Readme.md
risc-zero/benchmarks/: risc-zero.json
risc-zero/host/: Cargo.toml
risc-zero/host/benches/: bench.rs
risc-zero/host/src/: fib.rs  lib.rs  merkle.rs  poseidon.rs  sha.rs
risc-zero/methods/: Cargo.toml
risc-zero/methods/fib/: Cargo.toml
risc-zero/methods/merkle/: Cargo.toml
risc-zero/methods/merkle_membership/: Cargo.toml
risc-zero/methods/poseidon/: Cargo.toml
risc-zero/methods/poseidon/src/: main.rs
risc-zero/methods/sha/: Cargo.toml
risc-zero/shared/: Cargo.toml
sp1/: Makefile  Readme.md
sp1/algos/poseidon/lib/: Cargo.toml
sp1/algos/poseidon/lib/src/: lib.rs
sp1/algos/sha256/: Cargo.toml
sp1/algos/sha256/script/: Cargo.toml
sp1/inputs/: data.json
(+34 files in other folders)
