[package]
name = "powdr-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
powdr-riscv-syscalls = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.2" }
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.2", features = ["std"]}
starknet-crypto = { version = "0.7.2", default-features = false, features = ["alloc"] }
starknet-types-core = { version = "0.1.6", default-features = false, features = ["alloc"] }

[workspace]
