[package]
name = "fibonacci-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
starknet-crypto = { version = "0.7.2", default-features = false, features = ["alloc"] }
starknet-types-core = { version = "0.1.6", default-features = false, features = ["alloc"] }
